Introduce the data types for query service

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
   <modules>
     <module>rest</module>
     <module>deployments</module>
+    <module>model-java</module>
   </modules>
 
   <dependencyManagement>
