--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,10 @@ target
 .project
 .settings
 .idea
-uis/layover/node_modules
+**/node_modules
 uis/layover/node
 uis/layover/yarn-*
+uis/layover/yarn.lock
 uis/layover/mock/data/list/*
 **/dist
 **/.vscode
