--- a/model-java/pom.xml
+++ b/model-java/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.commonjava.auditquery</groupId>
         <artifactId>auditquery-parent</artifactId>
-        <version>0.13.2-SNAPSHOT</version>
+        <version>0.20.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>auditquery-model-java</artifactId>
@@ -67,6 +67,10 @@
         <dependency>
             <groupId>io.swagger</groupId>
             <artifactId>swagger-annotations</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>javax.annotation</groupId>
+          <artifactId>javax.annotation-api</artifactId>
         </dependency>
     </dependencies>
 
