--- a/pom.xml
+++ b/pom.xml
@@ -21,12 +21,12 @@
   <parent>
     <groupId>org.commonjava</groupId>
     <artifactId>commonjava</artifactId>
-    <version>16</version>
+    <version>20-SNAPSHOT</version>
   </parent>
 
   <groupId>org.commonjava.auditquery</groupId>
   <artifactId>auditquery-parent</artifactId>
-  <version>0.13.2-SNAPSHOT</version>
+  <version>0.20.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Audit Query Service</name>
@@ -41,18 +41,18 @@
 
   <properties>
     <projectOwner>Red Hat, Inc.</projectOwner>
-    <javaVersion>1.8</javaVersion>
+    <javaVersion>11</javaVersion>
 
-    <propulsorVersion>1.4</propulsorVersion>
-    <undertowVersion>1.4.22.Final</undertowVersion>
-    <weftVersion>1.10</weftVersion>
+    <propulsorVersion>2.0-SNAPSHOT</propulsorVersion>
+    <undertowVersion>2.0.1.Final</undertowVersion>
+    <weftVersion>1.20-SNAPSHOT</weftVersion>
     <slf4jVersion>1.7.25</slf4jVersion>
     <jackson-version>2.9.9</jackson-version>
     <infinispanVersion>9.4.7.Final</infinispanVersion>
     <hibernateVersion>5.8.1.Final</hibernateVersion>
     <httpcoreVersion>4.4.6</httpcoreVersion>
     <httpclientVersion>4.5.3</httpclientVersion>
-    <jhttpcVersion>1.9</jhttpcVersion>
+    <jhttpcVersion>1.20-SNAPSHOT</jhttpcVersion>
     <junitVersion>4.12</junitVersion>
     <commonslang3Version>3.8</commonslang3Version>
     <jgroupsVersion>4.0.4.Final</jgroupsVersion>
@@ -264,6 +264,11 @@
             <artifactId>jsr311-api</artifactId>
           </exclusion>
         </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>javax.annotation</groupId>
+        <artifactId>javax.annotation-api</artifactId>
+        <version>1.3.2</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
